myProjects/photoTree/tree/static/tree/CSS/chart.css
/* The parent element */
.css-chart {
  /* The chart borders */
  /*
    border-bottom: 1px solid;
    border-left: 1px solid;
  */
  /* The height, which is initially defined in the HTML */
  height: var(--widget-size);
  /* A little breathing room should there be others items around the chart */
  margin: 1em;
  /* Remove any padding so we have as much space to work with inside the element */
  padding: 0;
  position: relative;
  /* The chart width, as defined in the HTML */
  width: var(--widget-size);
}

/* The unordered list holding the data points, no list styling and no spacing */
.line-chart {
  list-style: none;
  margin-top: 50px;
  padding: 0;
}

/* Each point on the chart, each a 12px circle with a light border */
.data-point {
  background-color: white;
  border: 5px solid #7ab7e6; /*was light blue*/
  border-radius: 50%;
  height: 60px; /*height and width originally 12px*/
  position: absolute;
  width: 60px;

  /* The data points have a radius of 8px and the line segment has a width of 3px, 
    so we split the difference to center the data points on the line segment origins */
  bottom: calc(var(--y) - 21.5px);
  left: calc(var(--x) - 24.5px);

  /*originals 6.5 px and 9.5 px*/
}

.data-point:hover {
  transition-duration: 0.25s;
  transform: scale(1.2);
}

.hover-point {
  background-color: white;
  border: 2px solid lightblue;
  position: absolute;

  bottom: calc(var(--y) - 21.5px);
  left: calc(var(--x) - 24.5px);
}

.data-button {
  color: blue;
}

.data-button:active {
  color: black;
  background-color: black;
}
.data-button:visted {
  color: yellow;
  background-color: yellow;
}

/* Testing to make lines buttons */
.button-line {
  background-color: blue;
  bottom: var(--y);
  height: 3px;
  left: var(--x);
  position: absolute;
  width: 5px;

  transform: rotate(calc(var(--angle) * 1deg));
  transform-origin: left bottom;
  width: calc(var(--hypotenuse) * 1px);
  z-index: -1;
}
.button-line:hover {
  color: red;
  background-color: red;
}

.child-line {
  background-color: #3b5070; /*was black*/
  bottom: var(--y);
  height: 5px;
  left: var(--x);
  position: absolute;

  transform: rotate(calc(var(--angle) * 1deg));
  transform-origin: left bottom;
  width: calc(var(--hypotenuse) * 1px);
  z-index: -1;
}

.spouse-line {
  background-color: #ffc868;
  bottom: var(--y);
  height: 5px;
  left: var(--x);
  position: absolute;

  transform: rotate(calc(var(--angle) * 1deg));
  transform-origin: left bottom;
  width: calc(var(--hypotenuse) * 1px);
  z-index: -1;
}

.footer-box {
  display: flex;
  justify-content: space-between;
  width: 100%;

  background-color: #6486bd; /*#ffda9e;*/
}

.node-container {
  display: flex;
  flex-wrap: wrap;
  width: 50%;
}

.node-image {
  width: 100px;
  height: 100px;

  background-color: white;

  margin: 5px;

  border-radius: 50px;
}

.nodeBox-button {
  background-color: white;
  border: 5px solid #7ab7e6; /*was light blue*/
  border-radius: 70px;
  margin: 10px;
}

.nodeBox-button:hover {
  transition-duration: 0.25s;
  transform: scale(1.05);
}

.tree-image {
  width: 50px;
}

.footer-node {
  display: flex;
  border: 2px solid black;

  border-radius: 50px;
}

.confirm-box {
  display: flex;
  border: 2px solid black;
  height: 110px;
  width: 220px;
}

/*testing hover*/
.hide {
  display: none;
}

.info-box:hover + .hide {
  display: block;
  color: red;
}

/* CSS */
.button-34 {
  display: flex;
  margin: 5px;

  /*background: #5E5DF0;*/
  background: aliceblue;
  border-radius: 999px;
  box-shadow: #5e5df0 0 10px 20px -10px;
  box-sizing: border-box;
  color: black;
  cursor: pointer;
  font-family: Inter, Helvetica, "Apple Color Emoji", "Segoe UI Emoji",
    NotoColorEmoji, "Noto Color Emoji", "Segoe UI Symbol", "Android Emoji",
    EmojiSymbols, -apple-system, system-ui, "Segoe UI", Roboto, "Helvetica Neue",
    "Noto Sans", sans-serif;
  font-size: 16px;
  font-weight: 700;
  line-height: 24px;
  opacity: 1;
  outline: 0 solid transparent;
  padding: 8px 18px;
  user-select: none;
  -webkit-user-select: none;
  touch-action: manipulation;
  width: fit-content;
  word-break: break-word;
  border: 0;
}
/*
.button-34:hover {
  transition-duration: 0.25s;
  transform: scale(1.05);
}
*/
body {
  background-color: #eef7fe; /*was #fffaf0;*/
  /*background-color: #413fb4;*/
}

.center-menu {
  padding: 10px;
  border: 5px solid black;
  border-radius: 15px;

  position: fixed;
  width: 400px;
  height: 360px;
  z-index: 1;
  top: 50%;
  left: 50%;
  margin: -100px 0 0 -150px;
  /*background: #4056A1;*/
  background: #50bb89;
}

.menu-pics-container {
  display: flex;
  justify-content: space-around;
  margin-top: 10px;
}

.menu-pic {
  display: flex;
  border-radius: 25%;

  width: 100px;
  height: 100px;
}

.menu-button {
  display: flex;
  flex-direction: column;
  align-items: center;
  margin-bottom: 5px;
  margin-top: 15px;
}



.hover-menu {
  padding: 10px;
  display: inline-block;
  position: absolute;
  background: white;

  box-shadow: #5e5df0 0 10px 20px -10px;
}

